fix text align

--- a/src/features/questionsPanel/Question.module.css
+++ b/src/features/questionsPanel/Question.module.css
@@ -10,6 +10,7 @@
   border-radius: 200px;
   border: 3px solid rgb(99, 208, 244);
   box-shadow: inset 0 0 10px 3px rgb(99, 208, 244);
+  text-align: center;
 }
 
 @media (max-width: 1200px) {
